# yzip-v2

./: CMakeLists.txt  LICENSE  README.md  file_info_struct.h  system.h  yzip.cpp  yzip_struct.h
bitfile/: bitfile.cpp  bitfile.h
encryption/: aes_128_cbc.cpp  aes_128_cbc.h  encryption.cpp  encryption.h
endswith/: endswith.cpp  endswith.h
error/: error.cpp  error.h
file_handle/: file_handle.cpp  file_handle.h
getfile/: get_file.cpp  get_file.h
is_file_exist/: is_file_exist.cpp  is_file_exist.h
lzw/: lzw.cpp  lzw.h
package/: get_cur_time.cpp  get_cur_time.h  mode_to_letters.cpp  mode_to_letters.h  pack.cpp  pack.h
size_h/: size_h.cpp  size_h.h
verbose_info/: verbose_info.cpp  verbose_info.h
version/: app_info.h  version_etc.cpp  version_etc.h
